jenkins/jenkins.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vasimos

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: vasimos
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  namespace: vasimos
spec:
  selector:
    app: jenkins
  ports:
   - name: http
     port: 8080
     targetPort: 8080
   - name: jnlp
     port: 50000
     targetPort: 50000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: vasimos
  labels:
    app: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: master
          image: caladreas/jenkins-master-k8s
          volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: test-claim
